--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/delivery_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/courier_db
 spring.datasource.username=postgres
-spring.datasource.password=????_??????
+spring.datasource.password=postgres
 
 # ????? Liquibase ????? ???? ????? ????????
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
