--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/courier_db
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
-# ????? Liquibase ????? ???? ????? ????????
+# Liquibase
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+
+# ???? ? ?????????? Swagger UI (????? ???????? ?? http://localhost:8080/swagger-ui.html)
+springdoc.swagger-ui.path=/swagger-ui.html
+# ???? ? JSON-????????????
+springdoc.api-docs.path=/v3/api-docs
+# ???????? ??????????? ??????? ? ?????????? ???????
+springdoc.swagger-ui.operationsSorter=alpha
